# kafka-job-scheduler

./: .drone.yml  README.md  pyproject.toml  requirements.txt
src/: __init__.py
src/kafkajobs/jobqueue/: queue.py
src/kafkajobs/serialization/: __init__.py  image.py
tests/: test_jobs.py  test_serialization.py
