[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kafka-job-scheduler"
version = "0.0.0"
authors = [
  { name="Dmitry Grechka", email="dmitry@kashtanka.pet" },
]
dependencies = [
  'kafka-python == 2.0.2',
  'scikit-image == 0.19.3'
]

[tool.hatch.build.targets.wheel]
packages = ["src/kafkajobs"]

description = "A job queue based on Apache Kafka"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"

classifiers=[
        'License :: OSI Approved :: MIT License',  
        'Operating System :: OS Independent',        
        'Programming Language :: Python :: 3',
    ]

[project.urls]
"Homepage" = "https://github.com/LostPetInitiative/kafka-job-scheduler"
"Bug Tracker" = "https://github.com/LostPetInitiative/kafka-job-scheduler"